# SpatialWorld

./: .gitignore  README.md  config.py  pyproject.toml  setup.sh  task_classification_detail.csv
actions/: __init__.py  max_steps.py  parser.py  response_parser.py
configs/ai2thor/: config.yaml  load_config.py
configs/ai2thor/dual/: config.yaml
configs/carla/: config.yaml  load_config.py
configs/embodiedcity/: environment.yml  settings_fpv.json  vln_agent_config.yaml
configs/game/: block3d_config.py  maze_config.py  rubik_config.py  snake_config.py
configs/procthor/: config.yaml  load_config.py
configs/procthor/dual/: config.yaml
configs/virtualhome/: config.yaml  load_config.py
configs/virtualhome/dual/: config.yaml
core/: __init__.py  action_parser.py  max_steps.py  response_parser.py
core/agent/: __init__.py  graph.py
core/llm/: __init__.py  messages.py  provider.py  schemas.py
data/embodiedcity/tasks/: embodiedcity_2000_checked.json  embodiedcity_2001_checked.json  embodiedcity_2002_checked.json  embodiedcity_2003_checked.json  embodiedcity_2004_checked.json  embodiedcity_2005_checked.json  embodiedcity_2006_checked.json  embodiedcity_2007_checked.json  embodiedcity_2008_checked.json  embodiedcity_2009_checked.json  embodiedcity_3000_checked.json  embodiedcity_3001_checked.json  embodiedcity_3002_checked.json  embodiedcity_3003_checked.json  embodiedcity_3004_checked.json  embodiedcity_3005_checked.json  embodiedcity_3006_checked.json  embodiedcity_3007_checked.json  embodiedcity_3008_checked.json  embodiedcity_3009_checked.json  embodiedcity_4000_checked.json  embodiedcity_4001_checked.json  embodiedcity_4005_checked.json  (+30 more)
data/game/: game_gt.csv
envs/: README.md  __init__.py  base.py  procthor_wrapper.py  pyproject.toml
envs/ai2thor/: __init__.py  pyproject.toml  utils.py  wrapper.py
envs/carla/: __init__.py  local_planner.py  pyproject.toml  traffic_lights.py  utils.py  wrapper.py
envs/embodiedcity/: pyproject.toml
envs/game/: pyproject.toml
envs/procthor/: pyproject.toml
envs/virtualhome/: __init__.py  pyproject.toml  utils.py
evaluation/: __init__.py
evaluation/ai2thor/: __init__.py  base.py
evaluation/carla/: base.py  getters.py
evaluation/common/: __init__.py  getters.py  metrics.py  semantic_mapping.py
evaluation/procthor/: base.py  getters.py  metrics.py
evaluation/virtualhome/: base.py  metrics.py  semantic_mapping.py
mllm_base_agent/: __init__.py  console.py
mllm_base_agent/agent/: __init__.py  graph.py  runner.py  state.py
mllm_base_agent/config/: __init__.py
mllm_base_agent/dual_agent/: __init__.py
mllm_base_agent/environments/: __init__.py  base.py
mllm_base_agent/llm/: __init__.py  messages.py  provider.py  schemas.py
mllm_base_agent/prompts/: __init__.py  ai2thor.py  ai2thor_continuous.py  carla.py  procthor.py  procthor_continuous.py  registry.py  virtualhome.py
mllm_base_agent/tools/: __init__.py
scripts/: __init__.py  aggregate_results_by_category.py  analyze_and_export.py  evaluate_actions_ai2thor.py  evaluate_actions_carla.py  evaluate_actions_procthor.py  evaluate_actions_virtualhome.py
scripts/ai2thor/: __init__.py  run_benchmark.py
scripts/carla/: __init__.py  run_benchmark.py
scripts/embodiedcity/: __init__.py
scripts/game/: __init__.py  block3d_openai_evaluation.py  maze3d_pro_openai_evaluation.py  maze_openai_evaluation.py  rubik_openai_evaluation.py  run_benchmark.py  snake_openai_evaluation.py  sokoban_opengl_openai_evaluation.py
scripts/procthor/: __init__.py  run_benchmark.py
scripts/virtualhome/: __init__.py  run_benchmark.py
(+1204 files in other folders)
