[project]
name = "spatialworld"
version = "0.1.0"
description = "SpatialWorld spatial intelligence evaluation toolkit."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "pillow>=9.4.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "openai>=1.28.0",
]

[dependency-groups]
ai2thor = [
    "ai2thor>=5.0.0",
    "rich>=13.0.0",
    "opencv-python>=4.8.0",
    "tiktoken>=0.8.0",
    "httpx>=0.25.0",
    "pygame>=2.6.0",
    "tenacity>=8.0.0",
    "tqdm>=4.60.0",
]
procthor = [
    "ai2thor>=5.0.0",
    "prior>=1.0.0",
    "rich>=13.0.0",
    "opencv-python>=4.8.0",
    "tiktoken>=0.8.0",
    "httpx>=0.25.0",
    "pygame>=2.0.0",
    "matplotlib>=3.5.0",
    "tenacity>=8.0.0",
    "tqdm>=4.60.0",
]
virtualhome = [
    "virtualhome>=2.3.0",
    "rich>=13.0.0",
    "opencv-python>=4.8.0",
    "tiktoken>=0.8.0",
    "httpx>=0.25.0",
    "pygame>=2.6.0",
    "scipy>=1.10.0",
    "matplotlib>=3.5.0",
    "ikpy>=3.1",
    "screeninfo>=0.8.0",
    "tenacity>=8.0.0",
    "tqdm>=4.60.0",
]
carla = [
    "rich>=13.0.0",
    "opencv-python>=4.8.0",
    "tiktoken>=0.8.0",
    "httpx>=0.25.0",
    "pygame>=2.6.0",
    "tenacity>=8.0.0",
    "tqdm>=4.60.0",
]
embodiedcity = [
    "airsim>=1.8.1",
    "opencv-python>=4.8.0",
    "networkx>=2.8.0",
    "rich>=13.0.0",
    "tiktoken>=0.8.0",
    "httpx>=0.25.0",
    "scipy>=1.7.0",
    "tenacity>=8.0.0",
    "tqdm>=4.60.0",
]
game = [
    "pygame>=2.6.0",
    "opencv-python>=4.8.0",
    "PyOpenGL>=3.1.0",
    "PyOpenGL-accelerate>=3.1.0",
    "rich>=13.0.0",
    "tiktoken>=0.8.0",
    "httpx>=0.25.0",
    "tenacity>=8.0.0",
    "tqdm>=4.60.0",
]
dev = [
    "pytest>=7.0.0",
]

[tool.uv]
default-groups = []
override-dependencies = [
    "tqdm>=4.60.0",
    "certifi>=2024.0.0",
    "opencv-python>=4.8.0",
    "networkx>=2.8.0",
]
conflicts = [
    [
        { group = "ai2thor" },
        { group = "procthor" },
        { group = "virtualhome" },
        { group = "carla" },
        { group = "embodiedcity" },
        { group = "game" },
    ],
]

[tool.uv.sources]
spatialworld = { path = "..", editable = true }
